# comp-loinc

./: .gitignore  ABOUT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PYPI_SETUP.md  README.md  SandboxNotebook.ipynb  about.yaml  asserted-only--LOINC-primary.txt  asserted-only--all-primary.txt  asserted-only--all-supplementary.txt  chain.ttl  cl-parts.sparql  cl-parts.tsv  comploinc_config.yaml  confirmation.html  confirmation2.html  direct.ttl  equivalent_groups.tsv  equivalent_groups_defs.tsv  equivalent_groups_defs_primary.tsv  equivalent_groups_labels.tsv  equivalent_groups_labels_primary.tsv  foo.md  key-overwrite.txt  labels.tsv  makefile  missing_parts.tsv  mkdocs.yml  none--all-primary.txt  none--loinc-primary.txt  none--loincsnomed-primary.txt  parent_child.tsv  part-cycles.txt  poetry.lock.off  project.Makefile  pyproject.toml  readme-temp-equivalent-analysis.md  (+8 more)
.claude/: settings.local.json
.github/temp/: test.yml
.github/workflows/: build.yml  deploy-docs.yaml  main.yaml  pypi-publish.yaml  test.yml
.run/: chebi-part-equivalence.run.xml  generate-all --no-owl-output .run.xml  generate-all.run.xml  genes.run.xml  graph build loincs.run.xml  graph build parts-trees.run.xml  graph build parts.run.xml  loinclib.run.xml  loincs-comp-has-slash.run.xml  loincs-defs.run.xml  loincs-group-component-subpart-one-has-slash.run.xml  loincs-list.run.xml  loincs-primary-defs.run.xml  loincs-supplementary-defs.run.xml  main all.run.xml  parts-group-chem-eq.run.xml  parts-list.run.xml  parts-trees --no-owl-output.run.xml  parts-trees.run.xml
comp_loinc/: __init__.py  __main__.py  build.py
comp_loinc/ingest/: __init__.py  code_ingest.py  fhir_ingest.py  part_ingest.py  source_data_utils.py
comp_loinc/loinc_owl/: __init__.py  code_schema.py  part_schema.py
comp_loinc_schema/: README.md  mkdocs.yml
comp_loinc_schema/data/: part_hierarchy.tsv  part_type_lookup.json
comp_loinc_schema/docs/: PartClass.md  SystemClass.md  code_class_set.md  description.md
comp_loinc_schema/loinc_owl/: code_schema.py  part_schema.py  set_schema.py
comp_loinc_schema/model/: CONFIG.yaml
comp_loinc_schema/scripts/: code_ingest.py  data_class_transform.py  part_ingest.py  part_ontology_ingest.py  part_type_lookup.json  source_data_utils.py  test_data_transform.ipynb
curation/: nlp-matches.sssom.tsv
data/: composed_classes_data.yaml  loinc_classes.csv
data/code_files/: .gitignore
data/loinc_owl/: .gitignore  catalog-v001.xml  comp-loinc.owl  edit-examples.owl  loinc.owl
data/mappings/: loinc_chebi_fhir_concept_map.json
data/output/: .gitignore  catalog-v001.xml  composed_system_classes.owl  part_classes_test.owl
data/part_data/: part_data.tsv
data/part_files/: METHOD_CHEM_HIERARCHY.TSV  MOL_PATH_LPL.tsv
data/sssom_mapping_files/: loinc2chebi.tsv
docs/: CodeByComponent.md  CodeByComponent_has_component.md  CodeBySystem.md  CodeBySystem_has_system.md  ComponentClass.md  ComponentClass_subClassOf.md  LoincCodeClass.md  LoincCodeClass_subClassOf.md  LoincCodeOntology.md  MethodClass.md  MethodClass_subClassOf.md  PartClass.md  PropertyClass.md  PropertyClass_subClassOf.md  SystemClass.md  SystemClass_subClassOf.md  Thing.md  TimeClass.md  TimeClass_subClassOf.md  component_class_set.md  description.md  has_component.md  has_method.md  has_property.md  has_system.md  has_time.md  id.md  index.md  label.md  partType.md  subClassOf.md  system_class_set.md
documentation/: stats-axioms-entities.md  stats-misc.md  stats.md
examples/: README.md  Thing-001.yaml
hierarchy-lpl/: README.md
hierarchy-lpl/Ingest/: loinc_data.ipynb
hierarchy-lpl/Output/: testfile.ttl
hierarchy-lpl/Schema/: loincinfo.py  loincinfo.yaml
http-client/: .gitignore  http-client.env.json  loinc-fhir.http
local_data/: CHEM_HIERARCHY_LPL_DATA.xlsx  CHEM_HIERARCHY_REVISED.TSV
loinc_schema/: DocumentOntology.owl  Hierarchy_and_LPL_data.xlsx  Hierarchy_and_LPL_data.yaml  README.md  ingest.ipynb  loincinfo.py  loincinfo.yaml
loinc_schema/chem_hierarchy_lpl/: CHEM_HIERARCHY_LPL_DATA.xlsx  Digraph.gv  exampledata.yaml  ingest.ipynb  schema.py  schema.yaml
loinc_schema/hierarchy_lpl/: Digraph.gv  exampledata.yaml  ingest.ipynb  loincinfo.py  loincinfo.yaml
model/schema/: code_schema.yaml  core_schema.yaml  grouping_classes_schema.yaml  part_schema.yaml
owl-files/: .gitignore
owl-files/comploinc-default/: README.md  (+16 more)
recipe-files/: loinc-part-hierarchy-all.py  loinc-part-hierarchy-all.txt  loinc-part-list-all.py  loinc-part-list-all.txt  loinc-part-tree-hierarchy.py  loinc-parts-tree-hierarchy.py  loinc-parts-tree-hierarchy.txt  loinc-primary-def.py  loinc-primary-def.txt  loinc-snomed-equiv.txt  loinc-snomed-equive.py  loinc-supplementary-def.py  loinc-supplementary-def.txt  loinc-term-class-roots.py  loinc-term-class-roots.txt  loinc-term-list-all.py  loinc-term-list-all.txt  loinc-term-primary-def.py  loinc-term-primary-def.txt  loinc-term-supplementary-def.py  loinc-term-supplementary-def.txt  snomed-parts.py  snomed-parts.txt
recipe-files-dev/: dev.py  dev.txt  help.txt  schema-load.txt  shema-load.py
scripts/: analyze_equiv_def_classes.py  analyze_equivalent_definitions.py  generate_relationship_overlap.py
site/: 404.html  index.html  sitemap.xml
sources/: README.md
src/: comploinc_schame.py
temp-equivalence-analysis/: asserted-only--LOINCSNOMED-primary.txt  readme-temp-equivalent-analysis.md  stats.tsv  temp_equivalence_analysis.py
test/: config.py  gen_inputs.py  test.py  test_snomed_rf2_parser.py  utils.py
tests/: test.py
tests_v2/: schema_tests.py
(+267 files in other folders)
