[tool.poetry]
name = "comp-loinc"
version = "0.1.0"
description = "Computable OWL Formalization of LOINC"
authors = ["Tim  Putman <putmantime@users.noreply.github.com>"]
readme = "README.md"

packages = [
    {include = "comp_loinc",  from = "src"},
    {include = "loinclib",  from = "src"}
]

[tool.poetry.scripts]
#comp-loinc = 'comp_loinc:cli.cli'
comploinc = 'comp_loinc.cli:comploinc_cli'
comploinc-file = 'comp_loinc.cli:comploinc_file_cli'

[tool.poetry.dependencies]
# Languages
python = "^3.11"
# Python packages
linkml = "^1.5.0"
linkml-owl = "^0.2.7"
networkx = "^3.1"
numpy = "~1.24.3"  # Last 1.x version that's stable
matplotlib = "*"
pandas = "~2.0.3"  # Compatible with numpy 1.x
sssom = "^0.3.26"
typer = "^0.9.0"
# TODO: get commented out packages to work if still need for semantic similarity work
# todo: organize this list alphabetically
#plotly = "*"
sentence_transformers = "*"
#sklearn = "*"
#spacy = "*"
# Had difficulty / impossibility installing latest version of torch on Apple silicon. Used simpler version.
torch = "2.1.0"
#torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.5.1-cp311-none-macosx_11_0_arm64.whl" }

[tool.poetry.group.dev.dependencies]
# Python packages
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
