[tool.poetry]
name = "comp-loinc"
version = "0.2.0"
description = "Computable OWL Formalization of LOINC"
authors = ["Shahim Essaid <shahim@essaid.com>", "Tim Putman <putmantime@users.noreply.github.com>", "Joe Flack <jflack@jhu.edu"]
readme = "README.md"

packages = [
    { include = "comp_loinc", from = "src" },
    { include = "loinclib", from = "src" }
]

[tool.poetry.scripts]
#comp-loinc = 'comp_loinc:cli.cli'
comploinc = 'comp_loinc.cli:comploinc_cli'

[tool.poetry.dependencies]
# Languages
python = "^3.11"
# Python packages
jinja2 = ">=3.1.6"
jinjanator = "*"
linkml = "^1.5.0"
linkml-owl = "^0.2.7"
typer = "^0.15.0"
pandas = "^2.0.0"
sssom = "^0.3.26"
matplotlib = "*"
networkx = "^3.1"
numpy = "~1.24.3"  # Last 1.x version that's stable
# Compatible with numpy 1.x
py-horned-owl = "^1.2.0"
PyYAML = "*"
sentence_transformers = "*"
setuptools = "*"  # depednency for sssom
tabulate = "*"
torch = [
    # Had difficulty / impossibility installing latest version of torch on Apple silicon. Used simpler version.
    # todo: try 2.5 for best stability? will that work on mac?
    #    {version = "2.2.0", markers = "platform_machine == 'arm64'"},
    #torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.5.1-cp311-none-macosx_11_0_arm64.whl" }
    # Also tried to do this to solve ubuntu error, but didn't work: https://github.com/loinc/comp-loinc/actions/runs/13103295874/job/36554230943?pr=121


    #    {version = "*", markers = "platform_machine != 'arm64'", extras = ["cpu"]}

    # Linux/other platforms - CPU only
#    { version = "2.2.0+cpu", source = "pytorch-cpu", markers = "platform_machine != 'arm64'" }


    # Apple Silicon Macs
    {version = "2.2.0", markers = "platform_machine == 'arm64'"},
    # Linux/other platforms - CPU only
    {version = "2.2.0+cpu", source = "pytorch-cpu", markers = "platform_machine != 'arm64'"}
]
transformers = ">=4.48.0"  # includes security update
typer-slim = "^0.16.0"
upsetplot = "^0.9.0"
# - extras for optional data viz web app
dash = "*"
plotly = "*"
dash-bootstrap-components = "*"
gunicorn = "^20.1.0"  # for deploy

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''